--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,17 @@
 @tailwind utilities;
 
 html,
-body ,
+body,
 #root,
 .app {
   height: 100%;
   width: 100%;
 }
+
+.sliderBtn {
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+  border: 1px solid white;
+}
+
