--- a/src/index.css
+++ b/src/index.css
@@ -12,9 +12,17 @@ body,
   width: 100%;
 }
 
+/* Extra CSS */
 .sliderBtn {
   width: 15px;
   height: 15px;
   border-radius: 50%;
   border: 1px solid white;
+}
+
+.gallery {
+  display: grid;
+  padding: 1rem;
+  grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
+  grid-gap: 2rem;
 }
